fix: Resorcees AND add: Teacher update, destroy
