# app/Http/Controllers/Api/TeacherController.php
@@ -3,10 +3,10 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\Group\GroupResourceMin;
 use App\Http\Resources\Teacher\TeacherResource;
-use App\Models\Role;
+use App\Models\Group;
 use App\Models\Teacher;
-use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
@@ -21,22 +21,22 @@ class TeacherController extends Controller
     }
 
     /**
-      * @OA\Get(
-      * path="/api/teacher",
-      * summary="Get all teachers data",
-      * description="Teacher index",
-      * operationId="indexTeacher",
-      * tags={"Teacher"},
-      * security={ {"bearerAuth": {} }},
-      * @OA\Response(
-      *    response=401,
-      *    description="Wrong credentials response",
-      *    @OA\JsonContent(
-      *       @OA\Property(property="message", type="string", example="Unauthorized")
-      *        )
-      *     )
-      * )
-      */
+     * @OA\Get(
+     * path="/api/teacher",
+     * summary="Get all teachers data",
+     * description="Teacher index",
+     * operationId="indexTeacher",
+     * tags={"Teacher"},
+     * security={ {"bearerAuth": {} }},
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized")
+     *        )
+     *     )
+     * )
+     */
 
     public function index()
     {
@@ -49,34 +49,34 @@ class TeacherController extends Controller
     }
 
     /**
-      * @OA\Post(
-      * path="/api/teacher",
-      * summary="Set new teacher",
-      * description="Teacher store",
-      * operationId="storeTeacher",
-      * tags={"Teacher"},
-      * security={ {"bearerAuth": {} }},
-      * @OA\RequestBody(
-      *    required=true,
-      *    description="Pass user credentials",
-      *    @OA\JsonContent(
-      *       required={"firstname", "lastname", "email", "contact_no", "is_assistant", },
-      *       @OA\Property(property="firstname", type="string", example="John"),
-      *       @OA\Property(property="lastname", type="string", example="Doe"),
-      *       @OA\Property(property="email", type="string", example="user@gmail.com"),
-      *       @OA\Property(property="contact_no", type="string", example="+998 56 789 09 87"),
-      *       @OA\Property(property="is_assistant", type="boolean", example=false),
-      *    ),
-      * ),
-      * @OA\Response(
-      *    response=401,
-      *    description="Wrong credentials response",
-      *    @OA\JsonContent(
-      *       @OA\Property(property="message", type="string", example="Unauthorized")
-      *        )
-      *     )
-      * )
-      */
+     * @OA\Post(
+     * path="/api/teacher",
+     * summary="Set new teacher",
+     * description="Teacher store",
+     * operationId="storeTeacher",
+     * tags={"Teacher"},
+     * security={ {"bearerAuth": {} }},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass user credentials",
+     *    @OA\JsonContent(
+     *       required={"firstname", "lastname", "email", "contact_no", "is_assistant", },
+     *       @OA\Property(property="firstname", type="string", example="John"),
+     *       @OA\Property(property="lastname", type="string", example="Doe"),
+     *       @OA\Property(property="email", type="string", example="user@gmail.com"),
+     *       @OA\Property(property="contact_no", type="string", example="+998 56 789 09 87"),
+     *       @OA\Property(property="is_assistant", type="boolean", example=false),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized")
+     *        )
+     *     )
+     * )
+     */
 
     public function store(Request $req)
     {
@@ -117,31 +117,31 @@ class TeacherController extends Controller
     }
 
     /**
-      * @OA\Get(
-      * path="/api/teacher/{id}",
-      * summary="Get specific teacher data",
-      * description="Teacher show",
-      * operationId="showTeacher",
-      * tags={"Teacher"},
-      * security={ {"bearerAuth": {} }},
-      *
-      * @OA\Parameter(
-      *    in="path",
-      *    name="id",
-      *    required=true,
-      *    description="ID to fetch the targeted campaigns.",
-      *    @OA\Schema(type="string")
-      * ),
-      *
-      * @OA\Response(
-      *    response=401,
-      *    description="Wrong credentials response",
-      *    @OA\JsonContent(
-      *       @OA\Property(property="message", type="string", example="Unauthorized")
-      *        )
-      *     )
-      * )
-      */
+     * @OA\Get(
+     * path="/api/teacher/{id}",
+     * summary="Get specific teacher data",
+     * description="Teacher show",
+     * operationId="showTeacher",
+     * tags={"Teacher"},
+     * security={ {"bearerAuth": {} }},
+     *
+     * @OA\Parameter(
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    description="ID to fetch the targeted campaigns.",
+     *    @OA\Schema(type="string")
+     * ),
+     *
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized")
+     *        )
+     *     )
+     * )
+     */
 
     public function show(string $id)
     {
@@ -156,14 +156,177 @@ class TeacherController extends Controller
         return new TeacherResource($teacher);
     }
 
-    public function update(Request $request, string $id)
+    /**
+     * @OA\Put(
+     * path="/api/teacher/{id}",
+     * summary="Update specific Teacher",
+     * description="Teacher update",
+     * operationId="updateTeacher",
+     * tags={"Teacher"},
+     * security={ {"bearerAuth": {} }},
+     *
+     * @OA\Parameter(
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    description="ID to fetch the targeted campaigns.",
+     *    @OA\Schema(type="string")
+     * ),
+     *
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass user credentials",
+     *    @OA\JsonContent(
+     *       required={"firstname", "lastname", "email", "contact_no"},
+     *       @OA\Property(property="firstname", type="string", example="John"),
+     *       @OA\Property(property="lastname", type="string", example="Doe"),
+     *       @OA\Property(property="email", type="string", example="user@gmail.com"),
+     *       @OA\Property(property="contact_no", type="string", example="+998 56 789 09 87"),
+     *       @OA\Property(property="is_assistant", type="boolean", example=false),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized")
+     *        )
+     *     )
+     * )
+     */
+
+    public function update(Request $req, string $id)
     {
-        //
+        $teacher = Teacher::find($id);
+        if ($teacher === null)
+            return response()->json(["error" => "Not found"]);
+
+        if (auth('teacher')->user() !== null) {
+            if (auth('teacher')->user()->id != $id) {
+                return response()->json(["error" => "Unauthorized"], 401);
+            }
+        }
+
+        $validator = Validator::make($req->all(), [
+            'firstname' => 'required|string',
+            'lastname' => 'required|string',
+            'email' => 'required|email|unique:teachers,email',
+            'contact_no' => 'required|string',
+            'is_assistant' => 'boolean',
+            // 'group_id' => 'numeric|exists:groups,id',
+        ]);
+
+        if ($teacher->email !== $req->email) {
+            $found = Teacher::where('email', '=', $req->email)->first();
+            if ($found !== null) {
+                return response([
+                    "email" => [
+                        "The email has already been taken."
+                    ]
+                ]);
+            }
+        }
+
+        if ($validator->fails())
+            return response()->json($validator->messages());
+
+        if ($req->has('password') && (auth('teacher')->user() !== null)) {
+            $teacher->password = Hash::make($req->password);
+            $teacher->save();
+        }
+
+        if ($req->has('is_assistant') && (auth('api')->user() !== null)) {
+            $teacher->is_assistant = $req->is_assistant;
+            $teacher->save();
+        }
+
+        $teacher->update([
+            'firstname' => $req->firstname,
+            'lastname' => $req->lastname,
+            'email' => $req->email,
+            'contact_no' => $req->contact_no,
+        ]);
+
+        if (auth('api')->user() !== null)
+            auth('api')->user()->makeChanges(
+                'teacher updated from $val1 to $val2',
+                '$col-name',
+                $teacher
+            );
+
+        if (auth('teacher')->user() !== null)
+            auth('teacher')->user()->makeChanges(
+                'teacher updated from $val1 to $val2',
+                '$col-name',
+                $teacher
+            );
+
+        return response()->json([
+            "message" => "Teacher updated successfully",
+            "teacher" => $teacher->id
+        ]);
     }
+
+    /**
+     * @OA\Delete(
+     * path="/api/teacher/{id}",
+     * summary="Delete specific Teacher",
+     * description="Teacher delete",
+     * operationId="destroyTeacher",
+     * tags={"Teacher"},
+     * security={ {"bearerAuth": {} }},
+     *
+     * @OA\Parameter(
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    description="ID to fetch the targeted campaigns.",
+     *    @OA\Schema(type="string")
+     * ),
+     *
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong credentials response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized")
+     *        )
+     *     )
+     * )
+     */
 
     public function destroy(string $id)
     {
-        //
+        $teacher = Teacher::find($id);
+        if ($teacher === null)
+            return response()->json(["error" => "Not found"]);
+
+        // foreach ($teacher->stparents as $parent)
+        //     $parent->delete();
+
+        auth('api')->user()->makeChanges(
+            'teacher deleted',
+            'deleted',
+            $teacher
+        );
+
+        $groups = Group::where('teacher_id', $id)
+            ->orWhere('assistant_teacher_id', $id)
+            ->get();
+
+        if (count($groups) !== 0) {
+            return response()->json([
+                'data' => GroupResourceMin::collection($groups),
+                'status' => 400
+            ]);
+        }
+
+        $teacher->delete();
+
+        return response()->json([
+            "message" => "success",
+            "teacher" => $teacher->id,
+            "status" => 200,
+        ]);
     }
 
     /**
@@ -233,5 +396,4 @@ class TeacherController extends Controller
         auth('teacher')->logout();
         return response()->json(['message' => 'Teacher logged out'], 201);
     }
-    
 }
